Update 基本有用的电子阅读指南 v0.2 F-190615.md

--- a/基本有用的电子阅读指南 v0.2 F-190615.md
+++ b/基本有用的电子阅读指南 v0.2 F-190615.md
@@ -1,6 +1,6 @@
 # 基本有用的电子阅读指南
 
-writing by momo5269
+　　　　　　　　　　　　　　　　　　　　　　　　　　writing by momo5269
 
 
 
@@ -30,7 +30,7 @@ writing by momo5269
 
 ## 速览
 
-这么长怎么可能看完！于是有了速览版，点击链接可进入下载页。（`Typora` =`右键`-`打开链接`）
+　　这么长怎么可能看完！于是有了速览版，点击链接可进入下载页。（`Typora` =`右键`-`打开链接`）
 
 ### PC
 
@@ -63,6 +63,44 @@ writing by momo5269
 图书　[Kindle](https://www.amazon.cn/gp/digital/fiona/kcp-landing-page/)　[CAJViewer](http://cajviewer.cnki.net/)　[Librera](https://librera.mobi/)　[阅读](https://www.coolapk.com/apk/com.gedoor.monkeybook)　[閑讀書](https://www.lanzous.com/i3zqnkh)　[阿帕比阅读器](http://www.apabi.cn/download/)
 
 漫画　[PerfectViewer](https://soft.shouji.com.cn/down/21244.html)　[CDisplay](https://play.google.com/store/apps/details?id=com.progdigy.cdisplay.free)　[ComicRack](https://play.google.com/store/apps/details?id=com.cyo.comicrack.viewer.free)
+
+
+
+### 多格式
+
+------
+
+　　以前只专注于格式，介绍了太多软件。而有些人不喜欢这么多……想要支持广泛效率较好的，介绍以下几个：
+
+
+
+[Calibre](https://calibre-ebook.com/)　`Windows`　`Linux`　`macOS`
+
+```
+主要：PDF | EPUB MOBI AZW3 | DOCX RTF TXT
+次要：FB2 HTMLZ LIT LRF PDB PMIZ RB SNB TCR TXTZ ZIP
+```
+
+[静读天下](http://www.moondownload.com/chinese.html)　`Android`
+
+```
+主要：PDF | epub mobi azw/azw3 | Docx RTF
+次要：DjVu|fb2 html chm prc odt cbr cbz webp rar zip
+```
+
+[KOreader](https://github.com/koreader/koreader/wiki/KOReader%E7%BB%B4%E5%9F%BA)　`Kindle`　`Android`　`Kobo`　`PocketBook`
+
+```
+主要：PDF | EPUB MOBI | DOC RTF TXT 
+次要：DjVu|XPS FB2 HTML CHM CBZ  ZIP
+```
+
+
+
+1. PDF，无论任何平台都建议单独装个
+2. Win下，PDG、图片、漫画等多半要单独装，也都有绿色版
+3. 包括Kinlde在内，安卓版的azw3兼容比较复杂，虽仍建议解包epub看，但厚墨、静读天下5+也不错。
+4. 有些支持多格式的未列出，如[Librera](https://librera.mobi/)因为某些格式的体验较差；[TotalReader](https://itunes.apple.com/cn/app/id738947593)则是没有iOS相关经验。
 
 
 
@@ -229,7 +267,7 @@ writing by momo5269
 
 
 
-### 多功能
+#### 多功能
 
 ------
 
@@ -319,7 +357,7 @@ writing by momo5269
 
 
 
-### 其他
+### 补遗
 
 ------
 
@@ -490,7 +528,7 @@ $$
 
 
 
-##### 其他
+##### 其他处理
 
 ------
 
@@ -677,7 +715,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
-　　水平有限，目前只知道这个。可以把书签一步放到最后用Acrobat校对，顺路就另存为了。
+　　水平有限，目前只知道这个。可以把书签一步放到最后用Acrobat校对，顺路另存为。
 
 　　附送个人优化PDF，均书签+标记+OCR+快速Web查看，大多数已优化图像
 
@@ -706,43 +744,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 > [老马的原创空间](https://www.cnblogs.com/stronghorse/p/4913182.html)　[超星](https://pan.baidu.com/s/1Tt_j9s1yRhb2rTuZICyeMA)　[实用电脑印前技术](http://www.cnprint.org/bbs/showthread.php?p=2460641)　[正则表达式必知必会](https://pan.baidu.com/s/1155jC2Jbe3qEt2wUz5o43g)
 
 
-
-
-
-
-## 多格式
-
-　　以前只专注于格式，介绍了太多软件。而有些人不喜欢这么多……想要支持广泛效率较好的，推荐以下几个：
-
-
-
-[Calibre](https://calibre-ebook.com/)　`Windows`　`Linux`　`macOS`
-
-```
-主要：PDF | EPUB MOBI AZW3 | DOCX RTF TXT
-次要：FB2 HTMLZ LIT LRF PDB PMIZ RB SNB TCR TXTZ ZIP
-```
-
-[静读天下](http://www.moondownload.com/chinese.html)　`Android`
-
-```
-主要：PDF | epub mobi azw/azw3 | Docx RTF
-次要：DjVu|fb2 html chm prc odt cbr cbz webp rar zip
-```
-
-[KOreader](https://github.com/koreader/koreader/wiki/KOReader%E7%BB%B4%E5%9F%BA)　`Kindle`　`Android`　`Kobo`　`PocketBook`
-
-```
-主要：PDF | EPUB MOBI | DOC RTF TXT 
-次要：DjVu|XPS FB2 HTML CHM CBZ  ZIP
-```
-
-
-
-1. PDF，无论任何平台都建议单独装个
-2. Win下，PDG、图片、漫画等多半要单独装，也都有绿色版
-3. 包括Kinlde在内，安卓版的azw3兼容比较复杂，虽仍建议解包epub看，但厚墨、静读天下5+也不错。
-4. 有些支持多格式的未列出，如[Librera](https://librera.mobi/)因为某些格式的体验较差；[TotalReader](https://itunes.apple.com/cn/app/id738947593)则是没有iOS相关经验。
 
 
 
@@ -978,7 +979,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
-## 其他
+## Others
 
 　　由于能力有限，暂不介绍TXT等常见格式的优化阅读，比如PC下除了calibre 可以试试[StoryView](https://sites.google.com/site/storyviewse/Home)，而移动平台，推荐里与支持EPUB的阅读器基本都支持这些。而XPS，Windows系统自带`XPSViewer`即可查看也不再详述。
 
@@ -1148,15 +1149,11 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
-
-
 #### 输入法
 
 商业输入法多数支持手写入不再赘述，部分也支持拆字输入（但可能不如[字海](http://yedict.com/download/)做的好）
 
 此处仅推荐 手写：[`逍遥笔单文件版`](http://www.epinv.com/post/4854.html)　笔画部件篆书：[`中华书局古联输入法`](http://www.ancientbooks.cn/helpcore?input)（[宋体字库](http://www.ancientbooks.cn/helpcore?font)）
-
-
 
 
 
@@ -1172,9 +1169,103 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
+### 文本识别 
+
+------
+
+　　即OCR。常用请参考扫描书优化，也就是ABBYY和MODI……
+
+　　但有些时候只是截图或者手机拍一下完全没必要用这些，还是要根据使用环境自行选择
 
 
-### 文本编辑
+
+[ABBYY](https://masuit.com/misc/5)
+
+　　多语、数字、公式等支持好，亦能修正输出各种格式，建项目+对开模式校对编辑相对易用。
+
+　　福昕、万兴等也用其OCR引擎。软件体积较大，版权受马克丁限制（本文已提供）注意PDFT+ 仅适合识别和转换。
+
+　　FineReader14的Hot Folder功能，在不用电脑时可以自动处理文档。
+
+　　这对MODI非常好用……
+
+[MODI](https://www.cnblogs.com/stronghorse/p/4913182.html)
+
+　　其实速度更快，但只适用于中英文书，PDG文件等情况。虽仅可输出双层PDF，但多数情况完全可胜任。
+
+　　使用福昕风腾2.24校对，详见[校对双层PDF中的隐藏文本](https://www.cnblogs.com/stronghorse/p/4913425.html)。
+
+
+
+**移动平台**
+
+[ABBYY FineScanner](www.finescanner.com/)（内购，[iOS](https://itunes.apple.com/cn/app/id534203582)/[Android](https://play.google.com/store/apps/details?id=com.abbyy.mobile.finescanner.free)）
+
+[ABBYY Textgrabber](https://www.textgrabber.pro/)（内购，[iOS](https://itunes.apple.com/cn/app/id438475005)/[Android](https://play.google.com/store/apps/details?id=com.abbyy.mobile.textgrabber.full)）
+
+[扫描全能王](https://www.camscanner.com/)（内购，[iOS](https://itunes.apple.com/cn/app/id388624839)/[Android](https://www.coolapk.com/apk/3358/)）
+
+[猫图鹰](https://www.abcpen.com/pages/help/download/download.html)（内购，[iOS](https://itunes.apple.com/cn/app/id1446869210)/[Android](https://android.myapp.com/myapp/detail.htm?apkName=com.abcpen.ilens)）
+
+
+
+**在线**
+
+- PDF：[迅捷PDF在线版](https://app.xunjiepdf.com/ocr)等在线PDF处理支持
+- 中文：[极客扫描仪](http://www.gkocr.com/web/index.html)、[OCR Maker](http://www.ocrmaker.com/)、[诚华OCR](https://zhcn.109876543210.com/) 、[Super Tools](https://ocr.wdku.net/)
+- 英文：[New OCR](https://www.newocr.com/)、[Onnline OCR](https://www.onlineocr.net/)
+- 多语：[imagetotxt](http://www.imagetotxt.com/en/)、[quick-js-ocr](https://github.com/gongpeione/quick-js-ocr)（[例子](https://gongpeione.github.io/quick-js-ocr/example/)）、[tesseract.js](https://github.com/naptha/tesseract.js)（[官网](http://tesseract.projectnaptha.com/)）
+- 扩展：[取字](http://willingstudio.com/)、[CopyFish](https://a9t9.com/copyfish)
+- 微信：传图识字、微软AI识图截图
+
+
+
+**特殊**
+
+[Paperwork](https://openpaper.work/en-us/)
+
+繁体书+竖排→OCR+重排（目前没有比较适合阅读的方案，仅UnicornViewer高版本相对合适）
+
+
+
+**其他**
+
+Android：[白描](https://baimiao.uzero.cn/)（百度API）
+
+iOS：[Scanner Pro](https://itunes.apple.com/cn/app/scanner-pro-7-ocr-pdf-wen/id333710667)（25元）
+
+Note：[One note](http://www.onenote.com/download/)　[有道笔记](http://note.youdao.com/)　[印象笔记](https://www.yinxiang.com/)　萝卜书摘（[iOS](https://itunes.apple.com/cn/app/id1044134302)/[Android](http://appsites.io/s/1454314391884)）
+
+PC：[OmniPage](https://www.nuance.com/print-capture-and-pdf-solutions/optical-character-recognition/omnipage/omnipage-ultimate.html)([19](https://www.52pojie.cn/thread-869652-1-1.html)/[18](https://www.52pojie.cn/thread-547758-1-1.html)，Nuance) [文通TH-OCR](http://www.pc6.com/softview/SoftView_215352.html)（旧版为本地，最新免费为联网，清华）
+
+Mac：[Cisdem](https://www.cisdem.com/pdf-converter-ocr-mac.html)（69元）
+
+Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=show&redirect=OCRFeeder)→ 不可能加入Linux平台和开发包简介的！
+
+开源库：[tesseract](http://code.google.com/p/tesseract-ocr/)、[Grocr](http://vision.ucsd.edu/~kai/grocr/)、[OCRchie](http://http.cs.berkeley.edu/~fateman/kathey/ocrchie.html)、[Ocrad](http://directory.fsf.org/ocrad.html)、[Clara OCR](https://directory.fsf.org/wiki/Clara_OCR)、[OCRE(OCR Easy)](http://lem.eui.upm.es/ocre.html)、[GOCR](https://sourceforge.net/projects/jocr/)
+
+开源简介：[ocrgrid.org](http://www.ocrgrid.org/)（导航）[OCR识别的开源分析](https://blog.csdn.net/luojun2007/article/details/51614133)
+
+
+
+**附录**
+
+以前的测试结果（2018年；i5-4590 + 8G + Windows 10 Enterprise x64 1709/1803）
+
+| 软件名                 | 结果                       | 备注               |
+| ---------------------- | -------------------------- | ------------------ |
+| ABBYY PDF Transformer+ | 效果尚可，速度中           | FineReader结果近似 |
+| 福昕高级PDF编辑器      | 效果尚可，速度中           | ABBYY引擎          |
+| PDFelement Pro         | 效果较好，速度中，文件过大 | ABBYY引擎          |
+| Acrobat XI Pro         | 效果一般，速度中           |                    |
+| PDF-XChange            | 效果一般，速度慢           |                    |
+| 汉王OCR                | 效果较差，速度中           | 8 .1 黄昏月钓版    |
+
+
+
+
+
+### 编辑器
 
 ------
 
@@ -1190,13 +1281,202 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
+
+
+### 看图
+
+------
+
+> [`HoneyView`](http://www.bandisoft.com/honeyview/)　上文CBR/CBZ已提到过，综合表现优异，推荐默认。
+
+
+
+[ImageGlass](https://imageglass.org/)　简单支持SVG，独有设计师布局模式。
+
+[XnView](https://www.xnview.com/en/xnview/)/[XnViewMP](https://www.xnview.com/en/xnviewmp/)　开源多平台，功能全面，支持管理。
+
+[FastStone Image Viewer](http://www.carrotchou.blog/14935.html)　大文件缩放支持极佳，如前段时间的`行星发动机全景版”海报—大图`110M JPG
+
+　　
+
+　　美图看看可用[2.6.7](http://www.wmzhe.com/soft-31394.html) ，流氓软件2345看图王可用[纯净版](https://www.52pojie.cn/thread-926533-1-1.html)
+
+　　[ACDSEE](https://www.acdsee.com/en/index)、[Bridge](https://www.adobe.com/cn/products/bridge.html)等强调管理且比较笨重，无特殊需求不推荐。前者下载可看[这里](http://www.dayanzai.me/?s=ACDSEE)，后者在[Adobe全家桶](https://www.weibo.com/vposy)
+
+　　还有很多著名软件，如[IrfanView](https://www.irfanview.com/)　[MaxView](https://www.xiazaiba.com/html/1640.html)　[PicView](http://www.pc6.com/softview/SoftView_573447.html)　[FPV](http://www.fastpictureviewer.com/)不再赘述
+
+　　多数免费工具可在[codecs.com](https://www.free-codecs.com/software/graphics.htm)查看，收费工具可在[亿品元素](http://www.epinv.com/post/category/other/)等站点寻找下载。
+
+　　
+
+**安卓**
+
+------
+
+[F-Stop](https://soft.shouji.com.cn/down/25010.html)　快速滑动没有同类的模糊变清晰过程，尤其是大图（特大图可能闪进度条）库管理支持排除，综合体验极佳。
+
+[快图浏览](https://www.coolapk.com/apk/com.alensw.PicFolder)　备用，同时也是很好的选择。旋转方便，加载快。另外，漫画软件也可用于看图。
+
+　　由于F-Stop+ES/Soild Explorer 完全够用，很少接触其他软件，故无法面向所有需求推荐。
+
+------
+
+[Mysplash](https://www.coolapk.com/apk/com.wangdaye.mysplash)/[Resplash](https://www.coolapk.com/apk/com.b_lam.resplash?from=rss&version=1.0.3)　Unsplash第三方客户端
+
+[Pinterest](https://play.google.com/store/apps/details?id=com.pinterest)　[Instagram](https://play.google.com/store/apps/details?id=com.instagram.android)　[500PX](https://www.coolapk.com/apk/com.fivehundredpx.viewer)　[Pixiv](https://play.google.com/store/apps/details?id=jp.pxv.android)　[DeviantArt](https://play.google.com/store/apps/details?id=com.deviantart.android.damobile)　[Sankaku Complex](https://www.amazon.com/dp/B0163T09NY/)（[iOS](https://itunes.apple.com/us/app/id1139689972)）
+
+　　Pixiv也可用第三方客户端，如[PxViewer](https://www.coolapk.com/apk/jp.developer.retia.pxviewer)，其余请参考APP社区或相关论坛贴吧。
+
+
+
+**预览**
+
+------
+
+多数看图软件关联即可，少数如PSD、WebP才需要此支持。
+
+常见比如[Ardfry Codec](http://www.epinv.com/post/3149.html)　[WebP Codec](https://www.free-codecs.com/download/webp_codec.htm)　[SageThumbs](https://sourceforge.net/projects/sagethumbs/)　[MysticThumbs](http://www.epinv.com/post/5681.html)　[FastPictureViewer Codec Pack](https://www.52pojie.cn/thread-646965-1-1.html)
+
+但各有特点，不是收费、功能单一，就是占用太大……完全根据个人需求选择。
+
+前文提到的[QuickLook](https://github.com/QL-Win/QuickLook)/[Seer](https://sourceforge.net/projects/ccseer/)也属此类，而Mac下有`preview`不需要……
+
+
+
+**编辑**
+
+------
+
+此类软件太多，大家需求不一，推荐起来太难……仅简单介绍几个，不含在线工具。
+
+**绘图**：[GIMP](https://www.gimp.org/)　[Krita](https://krita.org/es/)　
+
+**转换**：[XnConvert](https://www.xnview.com/en/xnconvert/)　[FSResizer](http://www.faststone.org)　[JPEG Resizer](http://www.onlinedown.net/soft/28814.htm)　[ImageTuner](http://www.glorylogic.com/image-tuner.html)　
+
+**水印**：[Batch Inpaint](http://www.pc6.com/softview/SoftView_104665.html)　**图标**：[IcoLover](https://www.52pojie.cn/thread-643227-1-1.html)　**缩放**：[PhotoZoom](https://masuit.com/177)　[waifu2x](http://waifu2x.udp.jp/index.zh-CN.html)　**笔刷**：[abrViewer](https://sourceforge.net/projects/abrviewer/)　
+
+**编辑**：[光影魔术手](http://www.neoimaging.cn/)　[电脑图像工具箱](http://www.hao828.com/html/?1456.html)（集成各类处理，旧版1.1/1.5可百度）[Hornil StylePix](https://www.lanzous.com/i3ery5i)　[万彩办公大师](http://www.wofficebox.com/)
+
+
+
+#### 以图搜图
+
+------
+
+> [Google 图片](https://www.google.com/imghp?hl=en&tab=wi&ei=-e4jU-nNAeWBiQeUo4GQBA&ved=0CAQQqi4oAg)　[Yandex 图片](https://yandex.com/images/)　[360识图](http://st.so.com/)　[百度识图](http://stu.baidu.com/)
+
+> [Multi-service](http://www.iqdb.org/)　[ascii2d](http://www.ascii2d.net/imagesearch)　[SauceNAO](http://saucenao.com/)　[WAIT: What Anime Is This?](https://trace.moe/)
+
+其他如：[TinEye](http://www.tineye.com/)　[Picitup](http://www.picitup.com/)　　[搜狗图片](http://pic.sogou.com/#)　[次元搜图引擎](https://img.ciyuan.bi/)
+
+安卓可用[以图搜图](https://www.coolapk.com/apk/rikka.searchbyimage)　淘宝、[Pinterest](https://www.pinterest.com/)与同类图片站也包含搜图功能，但局限于站内，其余可参考附件书签。
+
+
+
+
+
+### 截图
+
+------
+
+> 截图　[FastStoneCapture](http://blog.sina.com.cn/s/blog_89a729a40102wjwk.html)　贴图　[Snipaste](https://zh.snipaste.com/)
+
+
+
+**截图**　[`Greenshot`](https://getgreenshot.org/)　[AeroSnap](https://shuax.com/project/tools/)　[Bug Shooting](http://www.bugshooting.com/)　[WinSnap](http://bbs.wuyou.net/forum.php?mod=viewthread&tid=413045)　[PicPick](http://www.dayanzai.me/picpick.html)　
+
+**G I F**　[`ScreenToGif`](https://www.screentogif.com/?l=zh_cn)　[GifCam](http://blog.bahraniapps.com/gifcam/)　[LICEcap](https://www.cockos.com/licecap/)
+
+**录像**　[`oCam`](http://ohsoft.net/eng/ocam/download.php?cate=1002)　[Bandicam](https://www.bandicam.cn/)（[3](https://www.52pojie.cn/thread-611585-1-1.html)/[4](http://www.carrotchou.blog/93.html)）　[屏幕录像专家](http://www.tlxsoft.com/pro/)（2014/[2016](http://www.carrotchou.blog/20472.html)/2019）
+
+此外还有[Apowersoft Screen Recorder](http://www.carrotchou.blog/125.html) [MSI Afterburner](https://cn.msi.com/page/afterburner)　等适用于不同场景。
+
+截录功能强调个人需求，不必执着于推荐。 毕竟平常QQ就够了……
+
+
+
+#### 截图OCR
+
+------
+
+> [`PandaOCR`](https://www.52pojie.cn/thread-919023-1-1.html)　[Capture2Text](https://sourceforge.net/projects/capture2text/)
+
+[天若OCR](https://www.52pojie.cn/thread-876331-1-1.html)　[树洞OCR](https://www.52pojie.cn/thread-912949-1-1.html)　[QQ截图+OCR](https://www.52pojie.cn/thread-860382-1-1.html)　[识别图片转文字工具](http://cencrack.com/?post=15)
+
+[简谱转调](https://zhuanlan.zhihu.com/p/35889926)　[Mathpix](https://mathpix.com/)/[MathOCR](https://sourceforge.net/projects/mathocr/)（识别公式）　[ShareX](https://getsharex.com/)（截图为主，支持OCR）
+
+此类工具很多，多数调用国内互联网公司的开放API。移动平台亦多，如[Microsoft Translator](https://www.coolapk.com/apk/com.microsoft.translator)　[QQ](https://www.coolapk.com/apk/com.tencent.mobileqq)　[扫描全能王](https://www.coolapk.com/apk/3358/)等。
+
+
+
+
+
+
+
+
+### 字幕
+
+------
+
+　　虽然播放器的选择大家都知道……文章也极多，但还是简单说下。下载可参考：[VideoHelp](https://www.videohelp.com/)　[Codecs.com](https://www.free-codecs.com/)
+
+　　*我原是介绍Reader的，怎么变成Player了……*
+
+
+
+**播放器**
+
+> 视频　[`MPC-BE`](https://sourceforge.net/projects/mpcbe/)　[`MPC-HC`](https://mpc-hc.org/)　+　[`XySubFilter`](https://github.com/Cyberbeing/xy-VSFilter/releases)
+
+**其他常用**[PotPlayer](http://potplayer.daum.net/?lang=zh_CN)（[闻雷整合](http://potplayer.ys168.com/)（[最新发布](https://pan.lanzou.com/b112173/)）/[莫妮卡汉化](https://pan.baidu.com/s/1eUfEIt0 )（提取码`r4iy`））[MPlayer](http://www.mplayer.org.cn) 　[QQ Player](https://www.xiazaiba.com/dl/1.html)　[VLC Player](https://www.videolan.org/)
+
+**解码整合**[完美解码](http://jm.wmzhe.com/) [终极解码](http://www.oursilu.com/thread-1689579-1-1.html)（[其他下载](https://hrtsea.com/1702.html)）
+
+
+
+> 预览　[`Icaros`](https://www.videohelp.com/software/Icaros) 　字幕　[`XySubFilter`](https://www.videohelp.com/software/XySubFilter)
+
+播放、编辑、解码、转换，软件实在太多，后面说明起来也很复杂……于是仅推荐音频的几个**：**
+
+**播放**：[foobar2000](http://www.foobar2000.org/)（[Asion汉化](http://blog.sina.com.cn/go2spa)）[Resonic.at](https://resonic.at/)（文件夹式管理）[AIMP](http://www.aimp.ru/)
+
+**转换**：[AudioExtractor](http://www.pazera-software.com/products/audio-extractor/)　[TAudioConverter](https://www.videohelp.com/software/TAudioConverter)　[fre:ac](https://www.freac.org/)
+
+**编辑**：[Audacity](https://www.audacityteam.org/)　
+
+
+
+
+
+**字幕编辑**
+
+　　因为面向初学者，最多是修订小错，只简单介绍几个常用工具：
+
+[mkvtoolnix](https://mkvtoolnix.download/)+[gMKVExtractGUI](https://sourceforge.net/projects/gmkvextractgui/)　MKV工具及其导出程序的GUI，用来提取字幕。
+
+[Batch Subtitles Converter](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter)　优秀的字幕格式转换，常用于`SRT`转`ASS`。新版本收费，免费的[1.24版](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter/Download)够用。
+
+[Aegisub](http://www.aegisub.org/)　开源免费跨平台的`ASS`字幕编辑工具
+
+[Unicue](https://kuyur.info/blog/archives/1388)　编码转换工具
+
+
+
+　　什么，想把`idx`/`sub`/`sup`转换成文本字幕？
+
+　　[`IdxSubOcr`](https://www.cnblogs.com/stronghorse/p/4913470.html) 老马出品的OCR转`SRT`软件。　　[BDSup2Sub](https://www.videohelp.com/software/BDSup2Sub)功能如名。
+
+
+
+
+
 ### 字体
 
 ------
 
-　　　主要介绍免费与免费可商用字体，链接内多有授权介绍。
+　　主要介绍免费与免费可商用字体，链接内多有授权介绍。
 
-　　　管理：[nexusfont](http://www.xiles.net/)　[字体试衣间](http://www.skycn.com/soft/appid/40625.html)　挂载：[字体挂载器](http://www.pc6.com/softview/SoftView_656204.html)　[Font Loader](https://www.trishtech.com/font-loader/)　[FontLoaderSub](https://github.com/yzwduck/FontLoaderSub)
+　　管理：[nexusfont](http://www.xiles.net/)　[字体试衣间](http://www.skycn.com/soft/appid/40625.html)　挂载：[字体挂载器](http://www.pc6.com/softview/SoftView_656204.html)　[Font Loader](https://www.trishtech.com/font-loader/)　[FontLoaderSub](https://github.com/yzwduck/FontLoaderSub)
 
 
 
@@ -1291,301 +1571,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 [The League of Moveable Type](https://www.theleagueofmoveabletype.com)　[IBM Plex](https://www.ibm.com/plex/)　[Morganite](https://gumroad.com/l/jPYXU)　[AiDeep 英文字体](https://www.zcool.com.cn/work/ZMjc0Njk1ODQ=.html)
 
 
-
-
-
-### 看图
-
-------
-
-> [`HoneyView`](http://www.bandisoft.com/honeyview/)　上文CBR/CBZ已提到过，综合表现优异，推荐默认。
-
-
-
-[ImageGlass](https://imageglass.org/)　简单支持SVG，独有设计师布局模式。
-
-[XnView](https://www.xnview.com/en/xnview/)/[XnViewMP](https://www.xnview.com/en/xnviewmp/)　开源多平台，功能全面，支持管理。
-
-[FastStone Image Viewer](http://www.carrotchou.blog/14935.html)　大文件缩放支持极佳，如前段时间的`行星发动机全景版”海报—大图`110M JPG
-
-　　
-
-　　美图看看可用[2.6.7](http://www.wmzhe.com/soft-31394.html) ，流氓软件2345看图王可用[纯净版](https://www.52pojie.cn/thread-926533-1-1.html)
-
-　　[ACDSEE](https://www.acdsee.com/en/index)、[Bridge](https://www.adobe.com/cn/products/bridge.html)等强调管理且比较笨重，无特殊需求不推荐。前者下载可看[这里](http://www.dayanzai.me/?s=ACDSEE)，后者在[Adobe全家桶](https://www.weibo.com/vposy)
-
-　　还有很多著名软件，如[IrfanView](https://www.irfanview.com/)　[MaxView](https://www.xiazaiba.com/html/1640.html)　[PicView](http://www.pc6.com/softview/SoftView_573447.html)　[FPV](http://www.fastpictureviewer.com/)不再赘述
-
-　　多数免费工具可在[codecs.com](https://www.free-codecs.com/software/graphics.htm)查看，收费工具可在[亿品元素](http://www.epinv.com/post/category/other/)等站点寻找下载。
-
-　　
-
-
-
-**安卓**
-
-------
-
-[F-Stop](https://soft.shouji.com.cn/down/25010.html)　快速滑动没有同类的模糊变清晰过程，尤其是大图（特大图可能闪进度条）库管理支持排除，综合体验极佳。
-
-[快图浏览](https://www.coolapk.com/apk/com.alensw.PicFolder)　备用，同时也是很好的选择。旋转方便，加载快。另外，漫画软件也可用于看图。
-
-　　由于F-Stop+ES/Soild Explorer 完全够用，很少接触其他软件，故无法面向所有需求推荐。
-
-------
-
-[Mysplash](https://www.coolapk.com/apk/com.wangdaye.mysplash)/[Resplash](https://www.coolapk.com/apk/com.b_lam.resplash?from=rss&version=1.0.3)　Unsplash第三方客户端
-
-[Pinterest](https://play.google.com/store/apps/details?id=com.pinterest)　[Instagram](https://play.google.com/store/apps/details?id=com.instagram.android)　[500PX](https://www.coolapk.com/apk/com.fivehundredpx.viewer)　[Pixiv](https://play.google.com/store/apps/details?id=jp.pxv.android)　[DeviantArt](https://play.google.com/store/apps/details?id=com.deviantart.android.damobile)　[Sankaku Complex](https://www.amazon.com/dp/B0163T09NY/)（[iOS](https://itunes.apple.com/us/app/id1139689972)）
-
-　　Pixiv也可用第三方客户端，如[PxViewer](https://www.coolapk.com/apk/jp.developer.retia.pxviewer)，其余请参考APP社区或相关论坛贴吧。
-
-
-
-
-
-**预览**
-
-------
-
-多数看图软件关联即可，少数如PSD、WebP才需要此支持。
-
-常见比如[Ardfry Codec](http://www.epinv.com/post/3149.html)　[WebP Codec](https://www.free-codecs.com/download/webp_codec.htm)　[SageThumbs](https://sourceforge.net/projects/sagethumbs/)　[MysticThumbs](http://www.epinv.com/post/5681.html)　[FastPictureViewer Codec Pack](https://www.52pojie.cn/thread-646965-1-1.html)
-
-但各有特点，不是收费、功能单一，就是占用太大……完全根据个人需求选择。
-
-前文提到的[QuickLook](https://github.com/QL-Win/QuickLook)/[Seer](https://sourceforge.net/projects/ccseer/)也属此类，而Mac下有`preview`不需要……
-
-
-
-**编辑**
-
-------
-
-此类软件太多，大家需求不一，推荐起来太难……仅简单介绍几个，不含在线工具。
-
-**绘图**：[GIMP](https://www.gimp.org/)　[Krita](https://krita.org/es/)　
-
-**转换**：[XnConvert](https://www.xnview.com/en/xnconvert/)　[FSResizer](http://www.faststone.org)　[JPEG Resizer](http://www.onlinedown.net/soft/28814.htm)　[ImageTuner](http://www.glorylogic.com/image-tuner.html)　
-
-**水印**：[Batch Inpaint](http://www.pc6.com/softview/SoftView_104665.html)　**图标**：[IcoLover](https://www.52pojie.cn/thread-643227-1-1.html)　**缩放**：[PhotoZoom](https://masuit.com/177)　[waifu2x](http://waifu2x.udp.jp/index.zh-CN.html)　**笔刷**：[abrViewer](https://sourceforge.net/projects/abrviewer/)　
-
-**编辑**：[光影魔术手](http://www.neoimaging.cn/)　[电脑图像工具箱](http://www.hao828.com/html/?1456.html)（集成各类处理，旧版1.1/1.5可百度）[Hornil StylePix](https://www.lanzous.com/i3ery5i)　[万彩办公大师](http://www.wofficebox.com/)
-
-
-
-
-
-#### 以图搜图
-
-------
-
-> [Google 图片](https://www.google.com/imghp?hl=en&tab=wi&ei=-e4jU-nNAeWBiQeUo4GQBA&ved=0CAQQqi4oAg)　[Yandex 图片](https://yandex.com/images/)　[360识图](http://st.so.com/)　[百度识图](http://stu.baidu.com/)
-
-> [Multi-service](http://www.iqdb.org/)　[ascii2d](http://www.ascii2d.net/imagesearch)　[SauceNAO](http://saucenao.com/)　[WAIT: What Anime Is This?](https://trace.moe/)
-
-其他如：[TinEye](http://www.tineye.com/)　[Picitup](http://www.picitup.com/)　　[搜狗图片](http://pic.sogou.com/#)　[次元搜图引擎](https://img.ciyuan.bi/)
-
-安卓可用[以图搜图](https://www.coolapk.com/apk/rikka.searchbyimage)　淘宝、[Pinterest](https://www.pinterest.com/)与同类图片站也包含搜图功能，但局限于站内，其余可参考附件书签。
-
-
-
-
-
-
-
-
-
-
-
-### 截图
-
-------
-
-> 截图　[FastStoneCapture](http://blog.sina.com.cn/s/blog_89a729a40102wjwk.html)　贴图　[Snipaste](https://zh.snipaste.com/)
-
-
-
-**截图**　[`Greenshot`](https://getgreenshot.org/)　[AeroSnap](https://shuax.com/project/tools/)　[Bug Shooting](http://www.bugshooting.com/)　[WinSnap](http://bbs.wuyou.net/forum.php?mod=viewthread&tid=413045)　[PicPick](http://www.dayanzai.me/picpick.html)　
-
-**G I F**　[`ScreenToGif`](https://www.screentogif.com/?l=zh_cn)　[GifCam](http://blog.bahraniapps.com/gifcam/)　[LICEcap](https://www.cockos.com/licecap/)
-
-**录像**　[`oCam`](http://ohsoft.net/eng/ocam/download.php?cate=1002)　[Bandicam](https://www.bandicam.cn/)（[3](https://www.52pojie.cn/thread-611585-1-1.html)/[4](http://www.carrotchou.blog/93.html)）　[屏幕录像专家](http://www.tlxsoft.com/pro/)（2014/[2016](http://www.carrotchou.blog/20472.html)/2019）
-
-此外还有[Apowersoft Screen Recorder](http://www.carrotchou.blog/125.html) [MSI Afterburner](https://cn.msi.com/page/afterburner)　等适用于不同场景。
-
-截录功能强调个人需求，不必执着于推荐。 毕竟平常QQ就够了……
-
-
-
-#### 截图OCR
-
-------
-
-> [`PandaOCR`](https://www.52pojie.cn/thread-919023-1-1.html)　[Capture2Text](https://sourceforge.net/projects/capture2text/)
-
-[天若OCR](https://www.52pojie.cn/thread-876331-1-1.html)　[树洞OCR](https://www.52pojie.cn/thread-912949-1-1.html)　[QQ截图+OCR](https://www.52pojie.cn/thread-860382-1-1.html)　[识别图片转文字工具](http://cencrack.com/?post=15)
-
-[简谱转调](https://zhuanlan.zhihu.com/p/35889926)　[Mathpix](https://mathpix.com/)/[MathOCR](https://sourceforge.net/projects/mathocr/)（识别公式）　[ShareX](https://getsharex.com/)（截图为主，支持OCR）
-
-此类工具很多，多数调用国内互联网公司的开放API。移动平台亦多，如[Microsoft Translator](https://www.coolapk.com/apk/com.microsoft.translator)　[QQ](https://www.coolapk.com/apk/com.tencent.mobileqq)　[扫描全能王](https://www.coolapk.com/apk/3358/)等。
-
-
-
-
-
-### OCR
-
-------
-
-　　常用请参考扫描书优化，其实也就是ABBYY和MODI……
-
-　　但有些时候只是截图或者手机拍一下完全没必要用这些，还是要根据使用环境自行选择
-
-
-
-[ABBYY](https://masuit.com/misc/5)
-
-　　多语、数字、公式等支持好，亦能修正输出各种格式，建项目+对开模式校对编辑相对易用。
-
-　　福昕、万兴等也用其OCR引擎。软件体积较大，版权受马克丁限制（本文已提供）注意PDFT+ 仅适合识别和转换。
-
-　　FineReader14的Hot Folder功能，在不用电脑时可以自动处理文档。
-
-　　这对MODI非常好用……
-
-[MODI](https://www.cnblogs.com/stronghorse/p/4913182.html)
-
-　　其实速度更快，但只适用于中英文书，PDG文件等情况。虽仅可输出双层PDF，但多数情况完全可胜任。
-
-　　使用福昕风腾2.24校对，详见[校对双层PDF中的隐藏文本](https://www.cnblogs.com/stronghorse/p/4913425.html)。
-
-
-
-
-
-**移动平台**
-
-[ABBYY FineScanner](www.finescanner.com/)（内购，[iOS](https://itunes.apple.com/cn/app/id534203582)/[Android](https://play.google.com/store/apps/details?id=com.abbyy.mobile.finescanner.free)）
-
-[ABBYY Textgrabber](https://www.textgrabber.pro/)（内购，[iOS](https://itunes.apple.com/cn/app/id438475005)/[Android](https://play.google.com/store/apps/details?id=com.abbyy.mobile.textgrabber.full)）
-
-[扫描全能王](https://www.camscanner.com/)（内购，[iOS](https://itunes.apple.com/cn/app/id388624839)/[Android](https://www.coolapk.com/apk/3358/)）
-
-[猫图鹰](https://www.abcpen.com/pages/help/download/download.html)（内购，[iOS](https://itunes.apple.com/cn/app/id1446869210)/[Android](https://android.myapp.com/myapp/detail.htm?apkName=com.abcpen.ilens)）
-
-
-
-
-
-**在线**
-
-- PDF：[迅捷PDF在线版](https://app.xunjiepdf.com/ocr)等在线PDF处理支持
-- 中文：[极客扫描仪](http://www.gkocr.com/web/index.html)、[OCR Maker](http://www.ocrmaker.com/)、[诚华OCR](https://zhcn.109876543210.com/) 、[Super Tools](https://ocr.wdku.net/)
-- 英文：[New OCR](https://www.newocr.com/)、[Onnline OCR](https://www.onlineocr.net/)
-- 多语：[imagetotxt](http://www.imagetotxt.com/en/)、[quick-js-ocr](https://github.com/gongpeione/quick-js-ocr)（[例子](https://gongpeione.github.io/quick-js-ocr/example/)）、[tesseract.js](https://github.com/naptha/tesseract.js)（[官网](http://tesseract.projectnaptha.com/)）
-- 扩展：[取字](http://willingstudio.com/)、[CopyFish](https://a9t9.com/copyfish)
-- 微信：传图识字、微软AI识图截图
-
-
-
-**特殊**
-
-[Paperwork](https://openpaper.work/en-us/)
-
-繁体书+竖排→OCR+重排（目前没有比较适合阅读的方案，仅UnicornViewer高版本相对合适）
-
-
-
-**其他**
-
-Android：[白描](https://baimiao.uzero.cn/)（百度API）
-
-iOS：[Scanner Pro](https://itunes.apple.com/cn/app/scanner-pro-7-ocr-pdf-wen/id333710667)（25元）
-
-Note：[One note](http://www.onenote.com/download/)　[有道笔记](http://note.youdao.com/)　[印象笔记](https://www.yinxiang.com/)　萝卜书摘（[iOS](https://itunes.apple.com/cn/app/id1044134302)/[Android](http://appsites.io/s/1454314391884)）
-
-PC：[OmniPage](https://www.nuance.com/print-capture-and-pdf-solutions/optical-character-recognition/omnipage/omnipage-ultimate.html)([19](https://www.52pojie.cn/thread-869652-1-1.html)/[18](https://www.52pojie.cn/thread-547758-1-1.html)，Nuance) [文通TH-OCR](http://www.pc6.com/softview/SoftView_215352.html)（旧版为本地，最新免费为联网，清华）
-
-Mac：[Cisdem](https://www.cisdem.com/pdf-converter-ocr-mac.html)（69元）
-
-Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=show&redirect=OCRFeeder)→ 不可能加入Linux平台和开发包简介的！
-
-开源库：[tesseract](http://code.google.com/p/tesseract-ocr/)、[Grocr](http://vision.ucsd.edu/~kai/grocr/)、[OCRchie](http://http.cs.berkeley.edu/~fateman/kathey/ocrchie.html)、[Ocrad](http://directory.fsf.org/ocrad.html)、[Clara OCR](https://directory.fsf.org/wiki/Clara_OCR)、[OCRE(OCR Easy)](http://lem.eui.upm.es/ocre.html)、[GOCR](https://sourceforge.net/projects/jocr/)
-
-开源简介：[ocrgrid.org](http://www.ocrgrid.org/)（导航）[OCR识别的开源分析](https://blog.csdn.net/luojun2007/article/details/51614133)
-
-
-
-
-
-**附录**
-
-以前的测试结果（2018年；i5-4590 + 8G + Windows 10 Enterprise x64 1709/1803）
-
-| 软件名                 | 结果                       | 备注               |
-| ---------------------- | -------------------------- | ------------------ |
-| ABBYY PDF Transformer+ | 效果尚可，速度中           | FineReader结果近似 |
-| 福昕高级PDF编辑器      | 效果尚可，速度中           | ABBYY引擎          |
-| PDFelement Pro         | 效果较好，速度中，文件过大 | ABBYY引擎          |
-| Acrobat XI Pro         | 效果一般，速度中           |                    |
-| PDF-XChange            | 效果一般，速度慢           |                    |
-| 汉王OCR                | 效果较差，速度中           | 8 .1 黄昏月钓版    |
-
-
-
-
-
-
-### 字幕
-
-------
-
-　　虽然播放器的选择大家都知道……文章也极多，但还是简单说下。下载可参考：[VideoHelp](https://www.videohelp.com/)　[Codecs.com](https://www.free-codecs.com/)
-
-　　*我原是介绍Reader的，怎么变成Player了……*
-
-
-
-**播放器**
-
-> 视频　[`MPC-BE`](https://sourceforge.net/projects/mpcbe/)　[`MPC-HC`](https://mpc-hc.org/)　+　[`XySubFilter`](https://github.com/Cyberbeing/xy-VSFilter/releases)
-
-**其他常用**[PotPlayer](http://potplayer.daum.net/?lang=zh_CN)（[闻雷整合](http://potplayer.ys168.com/)（[最新发布](https://pan.lanzou.com/b112173/)）/[莫妮卡汉化](https://pan.baidu.com/s/1eUfEIt0 )（提取码`r4iy`））[MPlayer](http://www.mplayer.org.cn) 　[QQ Player](https://www.xiazaiba.com/dl/1.html)　[VLC Player](https://www.videolan.org/)
-
-**解码整合**[完美解码](http://jm.wmzhe.com/) [终极解码](http://www.oursilu.com/thread-1689579-1-1.html)（[其他下载](https://hrtsea.com/1702.html)）
-
-> 预览　[`Icaros`](https://www.videohelp.com/software/Icaros) 　字幕　[`XySubFilter`](https://www.videohelp.com/software/XySubFilter)
-
-播放、编辑、解码、转换，软件实在太多，后面说明起来也很复杂……于是仅推荐音频的几个**：**
-
-**播放**：[foobar2000](http://www.foobar2000.org/)（[Asion汉化](http://blog.sina.com.cn/go2spa)）[Resonic.at](https://resonic.at/)（文件夹式管理）[AIMP](http://www.aimp.ru/)
-
-**转换**：[AudioExtractor](http://www.pazera-software.com/products/audio-extractor/)　[TAudioConverter](https://www.videohelp.com/software/TAudioConverter)　[fre:ac](https://www.freac.org/)
-
-**编辑**：[Audacity](https://www.audacityteam.org/)　
-
-
-
-
-
-**字幕编辑**
-
-　　　因为面向初学者，最多是修订小错，只简单介绍几个常用工具：
-
-[mkvtoolnix](https://mkvtoolnix.download/)+[gMKVExtractGUI](https://sourceforge.net/projects/gmkvextractgui/)　MKV工具及其导出程序的GUI，用来提取字幕。
-
-[Batch Subtitles Converter](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter)　优秀的字幕格式转换，常用于`SRT`转`ASS`。新版本收费，免费的[1.24版](https://sites.google.com/site/tsdarkness/batchsubtitlesconverter/Download)够用。
-
-[Aegisub](http://www.aegisub.org/)　开源免费跨平台的`ASS`字幕编辑工具
-
-[Unicue](https://kuyur.info/blog/archives/1388)　编码转换工具
-
-
-
-　　　什么，想把`idx`/`sub`/`sup`转换成文本字幕？
-
-　　　[`IdxSubOcr`](https://www.cnblogs.com/stronghorse/p/4913470.html) 老马出品的OCR转`SRT`软件。　　[BDSup2Sub](https://www.videohelp.com/software/BDSup2Sub)功能如名。
 
 
 
@@ -1723,8 +1708,6 @@ ROSTCM6　
 
 
 
-
-
 ## 附录
 
 
@@ -1738,6 +1721,8 @@ ROSTCM6　
 
 
 **基本知识**
+
+------
 
 **常见的水印**
 
@@ -1759,6 +1744,8 @@ ROSTCM6　
 
 
 **常用方法**
+
+------
 
 　　导出图片、PitStop、pdftoy流过滤、去水印软件（如[PDF水印清理专家](http://www.liyusoft.com/pdfwr)，PDF Watermark Revmoer）等
 
@@ -1899,15 +1886,11 @@ ROSTCM6　
 
 **图书馆数字馆藏**
 
-通常到当地市图书馆办张读者证即可使用各类数字馆藏服务，若想足不出户：
+　　通常到当地市图书馆办张读者证即可使用各类数字馆藏服务，若想足不出户：
 
 [浙江省图书馆](http://www.zjlib.cn/) 支付宝搜索其生活号注册 [广西壮族自治区图书馆](http://www.gxlib.org.cn/) 在线手机号注册
 
-[贵州省图书馆](http://www.gzlib.com.cn/) 在线注册需五日审核通知（可能杳无音讯，仅作收录）
-
-[贵州数字图书馆](http://www.gzlib.org/)：[在线领卡](http://222.85.132.125/reg/showpage.action?s=06CBC178384CE153E195AC6C6676539A)　6个月未登录系统将视为无效卡清除。
-
-
+[贵州省图书馆](http://www.gzlib.com.cn/) 可能杳无音讯，仅作收录 [贵州数字图书馆](http://www.gzlib.org/) 右上角在线领卡注册
 
 ------
 
@@ -1917,9 +1900,9 @@ ROSTCM6　
 
 ### 附件简要
 
+------
 
-
-[蓝奏云](https://www.lanzous.com/b706726/)　**密码**`7pmx`　or [Github](https://github.com/momo5269/Maybe-useful-Reader-Guide/tree/master/attachments) 
+　　[蓝奏云](https://www.lanzous.com/b706726/)　**密码**`7pmx`　or [Github](https://github.com/momo5269/Maybe-useful-Reader-Guide/tree/master/attachments) 
 
 
 
@@ -1927,11 +1910,11 @@ ROSTCM6　
 
 Firefox导出的Html书签，直接打开即可。
 
-这是作者目前使用的书签，**个人痕迹明显、杂乱不全**……还有太多未整理，没精力添加进去了（咱现在都是搜书签）
+　　这是作者目前使用的书签，**个人痕迹明显、杂乱不全**……还有太多未整理，没精力添加进去了（咱现在都是搜书签）
 
-特色是包含还算全的在线漫画站点、下载生肉的博客；能在线看的期刊、数据可视化和一点儿开放教科书（Open TextBook）
+　　特色是包含还算全的在线漫画站点、下载生肉的博客；能在线看的期刊、数据可视化和一点儿开放教科书
 
-有个收费文件夹仅为围观和信息整理，请勿购买。
+　　有个收费文件夹仅为围观和信息整理，请勿购买。
 
 
 
@@ -1939,7 +1922,7 @@ Firefox导出的Html书签，直接打开即可。
 
 若校外需要知网，可用网上公开账号或者购买XX图书馆获取入口。注意此列表除知网外均已失效。
 
-相关软件：[冰点文库下载器](http://www.bingdian001.com/?p=30)　[文献神器](http://www.9312.net/download.html) | [SciHub Desktop](https://zhuanlan.zhihu.com/p/31809890)　[豆丁当当](https://www.52pojie.cn/thread-834272-1-1.html)
+　　相关软件：[冰点文库下载器](http://www.bingdian001.com/?p=30)　[文献神器](http://www.9312.net/download.html) | [SciHub Desktop](https://zhuanlan.zhihu.com/p/31809890)　[豆丁当当](https://www.52pojie.cn/thread-834272-1-1.html)
 
 
 
@@ -1981,19 +1964,17 @@ Firefox导出的Html书签，直接打开即可。
 
 如 `Blacksad digital .cbr` → `Blacksad (2010) (digital) (Son of Ultron II-Empire).cbr`
 
-搜索正确文件名结果会比较可靠，会有单独种子、种子包含或网盘下载等方式，逐一尝试即可。
+搜索正确文件名结果**比较可靠**，会有单独种子、种子包含或网盘下载等方式，逐一尝试即可。
 
 
 
 中文扫漫有点类似，举个例子`[Dragon.Ball 龍珠完全版][鳥山明][文傳][C.C][34完+2]`能总结出来吗？
 
-明白后，以后用百度、云盘精灵可能会有比较有趣的结果，也可以用我的[Google CSE](https://cse.google.com/cse?cx=016810457090315640577:l1mpxg5rvqe)。不过，搜索并非关键。
+明白后，以后用百度、云盘精灵可能会有比较有趣的结果。不过，搜索并非关键。
 
 
 
 什么 你说[BD](https://fr.wikipedia.org/wiki/Bande_dessin%C3%A9e)生肉？文件名不再有用？那么[Yggtorrent](https://www.yggtorrent.gg)适合你，也可以仔细看我的书签。
-
-
 
 
 
@@ -2031,13 +2012,15 @@ Firefox导出的Html书签，直接打开即可。
 
 ### 链接失效说明
 
+------
+
 更新日期：2019.06.15
 
 吾爱破解此次自查后失效颇多，更新项目如下：
 
 | 名称                                                         | 更新源   | 地址                                             |
 | ------------------------------------------------------------ | -------- | ------------------------------------------------ |
-| [`MiniPDF`](http://www.52read.org/forum.php?mod=viewthread&tid=2561) | 暂无更新 |                                                  |
+| [`MiniPDF`](http://www.52read.org/forum.php?mod=viewthread&tid=2561) | 无       |                                                  |
 | [`Pitstop`](http://www.52read.org/forum.php?mod=viewthread&tid=687) | 脚本之家 | https://www.jb51.net/softs/624889.html           |
 | [SCITranslate10 VIP](https://www.52pojie.cn/thread-849027-1-1.html) | 为PC6    | http://www.pc6.com/softview/SoftView_638335.html |
 | EverEdit（[破解过期弹窗](https://www.52pojie.cn/thread-895704-1-1.html)） | Delete   |                                                  |
@@ -2064,4 +2047,4 @@ Firefox导出的Html书签，直接打开即可。
 
 　　最后，为本文可能带来的的误导表示由衷的歉意。
 
-​                                                                                                                                                 momo5269　2019-05-05
+　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　momo5269　2019-05-05
